Update Printf and minor Fixes